--- a/README
+++ b/README
@@ -1,3 +1,14 @@
-Companion code for
-Active research repository for TED Analytics Project
+TED Analytics Project
+
+Overview
+========
+TBD
+
+Contents
+========
+TBD
+
+
+
+
 
